--- a/style.css
+++ b/style.css
@@ -1,3 +1,87 @@
-h1 {
-  color: red;
+/* font imports */
+
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian:wght@400;800&display=swap");
+
+/* Reset some default values */
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font: inherit;
+  font-family: "Noto Sans Georgian", sans-serif;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+}
+
+section {
+  padding: 2rem 0;
+}
+
+section h1 {
+  margin-bottom: 2rem;
+}
+
+/* Header css  */
+.main-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #1a1e1f;
+  transition: background-color 0.4s ease;
+  color: white;
+  height: 100px;
+  align-items: center;
+  z-index: 1000;
+}
+
+.main-header.transparent {
+  background-color: rgba(26, 30, 31, 0.7);
+}
+
+.container {
+  padding: 2rem;
+  max-width: 65%;
+  margin-inline: auto;
+  color: white;
+}
+
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navigation__list {
+  display: flex;
+  gap: 1rem;
+  list-style: none;
+}
+
+.navigation__list a {
+  color: white;
+}
+
+.navigation__list a:hover,
+.navigation__list a.active {
+  color: #3498db;
+}
+
+.mobile-links,
+#menuBtn {
+  display: none;
+}
+
+main h1 {
+  height: 1200px;
 }
