--- a/style.css
+++ b/style.css
@@ -79,16 +79,12 @@ section h1 {
 
 .navigation__list a:hover,
 .navigation__list a.active {
-  color: #3498db;
+  color: rgb(0, 174, 243);
 }
 
 .mobile-links,
 #menuBtn {
   display: none;
-}
-
-main h1 {
-  height: 1200px;
 }
 
 /* Hero section */
@@ -110,12 +106,77 @@ main h1 {
 }
 
 .hero-title__more {
-  color: #3498db;
+  color: rgb(0, 174, 243);
   font-size: 1.7rem;
   margin-top: 3rem;
 }
 
 .hero-title__more:hover {
   color: gray;
+  cursor: pointer;
+}
+
+/* all courses section */
+.courses {
+  background-color: #161616;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(min(17rem, 100%), 1fr));
+  grid-gap: 2rem;
+  grid-template-rows: 3;
+}
+
+.card {
+  background-color: #161616;
+  width: fit-content;
+  border: 1px solid gray;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  gap: 2rem;
+}
+
+.card img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 4px;
+}
+
+.card__info {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.card__title {
+  font-size: 1.4rem;
+  font-family: sans-serif;
+}
+
+.card__desc {
+  font-size: 0.9rem;
+}
+
+.card__about {
+  padding: 3rem 1rem;
+  color: #3498db;
+  display: flex;
+  gap: 1.5rem;
+  align-items: center;
+  font-size: 1.1rem;
+}
+
+.card__about::before {
+  content: "\2192";
+  font-size: 1.2em;
+}
+
+.card__about:hover {
+  filter: brightness(0.8);
   cursor: pointer;
 }
