feat: add faq section with show/hide questions feature

--- a/style.css
+++ b/style.css
@@ -180,3 +180,75 @@ section h1 {
   filter: brightness(0.8);
   cursor: pointer;
 }
+
+/* Partniors section carusel */
+
+.partniors {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+/* FAQ section */
+.faq {
+  background-color: #161616;
+}
+
+.faq__headlines {
+  display: flex;
+  justify-content: space-between;
+}
+
+.faq__headlines {
+  font-size: 1.5rem;
+}
+
+.faq__headlines h2 {
+  color: #3498db;
+  font-size: 1.2rem;
+}
+
+.faq__headlines h2:hover {
+  color: gray;
+  cursor: pointer;
+}
+
+.faq__question {
+  border-bottom: 1px solid #373636;
+  height: auto;
+}
+
+.faq__question button {
+  width: 100%;
+  background-color: #161616;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5rem 0;
+  border: none;
+  outline: none;
+  font-size: 1.2rem;
+  color: #fff;
+  cursor: pointer;
+}
+.faq__question p {
+  font-size: 0.9rem;
+  max-height: 0;
+  overflow: hidden;
+  opacity: 0;
+  line-height: 1.5;
+  transition: all 0.6s ease;
+}
+
+.faq__question p.show {
+  max-height: 1200px;
+  opacity: 1;
+  padding: 1rem 0;
+}
+
+.d-arrow {
+  transition: transform 0.5s ease-in;
+  color: #fff;
+}
+
+.faq__question button .d-arrow.rotate {
+  transform: rotate(180deg);
+}
