fix : change fonts and href properties for fix bugs

--- a/query.css
+++ b/query.css
@@ -1,6 +1,7 @@
 @media (max-width: 768px) {
   .navigation__list {
     display: none;
+    position: relative;
   }
 
   .container {
@@ -13,14 +14,16 @@
     color: white;
     background-color: transparent;
     border: none;
+    position: absolute;
+    right: 0;
   }
 
   .mobile-links {
     position: absolute;
-    top: 100px;
+    top: 0;
     right: 0;
     width: 50%;
-    height: calc(100vh - 100px);
+    height: 100vh;
     background-color: #1a1e1f;
     display: flex;
     flex-direction: column;
