--- a/style.css
+++ b/style.css
@@ -204,6 +204,63 @@ section h1 {
 
 .partniors {
   background-color: rgba(0, 0, 0, 0.7);
+
+  position: relative;
+  overflow: hidden;
+}
+
+.slider-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.partniors img {
+  width: 30%;
+  height: auto;
+}
+
+.partniors .arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 30px;
+  height: 30px;
+  background-color: rgba(255, 255, 255, 0.7);
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
+
+.partniors .left-arrow {
+  left: 10px;
+}
+
+.partniors .right-arrow {
+  right: 10px;
+}
+
+.partniors .slider-dots {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+}
+
+.partniors .dot {
+  width: 10px;
+  height: 10px;
+  margin: 0 5px;
+  background-color: #555;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.partniors .dot.active {
+  background-color: #bbb;
 }
 
 /* FAQ section */
