fix: change css properties for fix parniorts section bug also add fav icon

--- a/query.css
+++ b/query.css
@@ -47,6 +47,19 @@
     padding-right: 2rem;
     font-size: 2rem;
   }
+
+  .partniors__items {
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+
+  .partniors__btn {
+    display: none;
+  }
+
+  .partniors__items__img {
+    width: 100%;
+  }
 }
 
 @media (max-width: 640px) {
