feat : during scroll for smaller tablet add hide/show navbar feature

--- a/query.css
+++ b/query.css
@@ -17,6 +17,7 @@
 
   .navigation__list {
     display: none;
+    transition: transform 0.3s ease;
   }
 
   #menuBtn {
@@ -46,6 +47,7 @@
     color: white;
     padding-right: 2rem;
     font-size: 2rem;
+    transition: transform 0.3s ease;
   }
 
   .partniors__items {
