--- a/style.css
+++ b/style.css
@@ -147,14 +147,14 @@ section h1 {
 
 .cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(min(15.5rem, 80%), 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(min(15.5rem, 100%), 1fr));
   grid-gap: 2rem;
   grid-template-rows: 3;
 }
 
 .card {
   background-color: #161616;
-  width: fit-content;
+  width: 100%;
   border: 1px solid gray;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -208,7 +208,7 @@ section h1 {
 /* Partniors section carusel */
 
 .partniors {
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: #2b2b2b;
   position: relative;
   overflow: hidden;
 }
