--- a/query.css
+++ b/query.css
@@ -65,13 +65,12 @@
     background-color: #1a1e1f;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
     justify-content: center;
-    gap: 3rem;
+    gap: 4rem;
     z-index: 1;
     color: white;
-    padding-right: 2rem;
-    font-size: 2rem;
+    padding: 2rem;
+    font-size: 2.5rem;
   }
 
   .hero-title__subtitle {
@@ -113,7 +112,7 @@
     max-width: 424px;
   }
   .hero-title__subtitle {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 
   /* footer section */
