--- a/query.css
+++ b/query.css
@@ -60,7 +60,7 @@
     position: fixed;
     top: 0;
     right: 0;
-    min-width: 40%;
+    max-width: 40%;
     height: 100vh;
     background-color: #1a1e1f;
     display: flex;
