--- a/query.css
+++ b/query.css
@@ -89,18 +89,19 @@
     position: fixed;
     top: 0;
     right: 0;
-    max-width: 40%;
-    height: 100vh;
+    min-width: 40%;
+    height: 100%;
     background-color: #1a1e1f;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     gap: 4rem;
     z-index: 1;
     color: white;
-    padding: 2rem;
+    padding-inline: 1rem;
     font-size: 2.5rem;
+    text-align: center;
   }
 
   .hero-title__subtitle {
@@ -179,4 +180,16 @@
   .container {
     max-width: 288px;
   }
+}
+
+@media (max-width: 288px) {
+  .container {
+    max-width: 211px;
+  }
+  /* main {
+    min-width: 288px;
+  }
+  footer {
+    width: 288px;
+  } */
 }
