--- a/query.css
+++ b/query.css
@@ -101,7 +101,7 @@
     right: 0;
     min-width: 40%;
     height: 100%;
-    background-color: #1a1e1f;
+    background-color: var(--primary);
     display: flex;
     flex-direction: column;
     justify-content: center;
